# fastapi_celery

./: .coverage  README.md  celerybeat-schedule  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 00c058ba1fc5_.py  796082a6d86e_.py  f33ddaa2f713_.py
compose/: auto_deploy_do.sh
compose/local/fastapi/: Dockerfile
compose/local/fastapi/celery/worker/: start
compose/production/fastapi/: Dockerfile
compose/production/fastapi/celery/flower/: start
project/: __init__.py  celery_utils.py  config.py
project/tdd/: __init__.py  views.py
project/users/: __init__.py  tasks.py  views.py
project/users/templates/: form.html
project/ws/: views.py
tests/: conftest.py  test_celery_utils.py
tests/tdd/: test_models.py
tests/users/: test_views.py
