[tool.poetry]
name = "fastapi-celery-project"
version = "0.1.0"
description = ""
authors = ["raphael trench <raphaeltrench@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_celery_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.79.0"
uvicorn = {version = "0.18.2", extras = ["standard"]}
celery = "5.2.7"
redis = "4.3.4"
flower = "1.2.0"
SQLAlchemy = "1.4.40"
alembic = "1.8.1"
psycopg2 = "^2.9.4"
watchfiles = "0.16.1"
Jinja2 = "3.1.2"
requests = "2.28.1"
asgiref = "3.5.2"
asyncio-redis = "0.16.0"
broadcaster = "0.2.0"
aioredis = "2.0.1"
python-socketio = "5.7.1"
pytest = "7.1.2"
factory-boy = "3.2.1"
pytest-factoryboy = "2.5.0"
pytest-cov = "3.0.0"
Pillow = "9.2.0"
python-multipart = "0.0.5"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["tests/*"]
   